--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "sequelize": "^6.33.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
